[OpenNeuro] Recorded changes

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,5 @@
  
   - converted to BIDS std
 
-1.0.0 2011-10-06
-
-  -  initial release
+1.0.0 2022-12-14
+  - Updated sub-09_task-Classificationprobewithoutfeedback_bold.nii.gz, which was corrupted in the previous version
